Fix selected elements are ontop of other elements
Change the z index for elements in context to be 1 and also changed the z index of ruler bars to 2, so that the selected elements doesnt overlap the ruler

--- a/DuggaSys/diagram.css
+++ b/DuggaSys/diagram.css
@@ -182,12 +182,14 @@
     position:absolute;
     width:100%;
     height:40px;
+    z-index:2;
 }
 #ruler-y-svg {
     background-color: #FFF;
     position:absolute;
     width:40px;
     height:100%;
+    z-index:2;
 }
 
 .diagramIcons{
